--- a/index.html
+++ b/index.html
@@ -5,20 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aaron Online Portfolio</title>
-    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Aaron Marsh Online Portfolio</h1>
-    <h2>About Me</h2>
-    <p>First paragraph</p>
-    <p>Second paragraph</p>
-    <ul>
-        <li>First item</li>
-        <li>Second item</li>
-        <li>Third item</li>
-    </ul>
-    <img id="gullfoss" src = "https://upload.wikimedia.org/wikipedia/commons/f/f0/Gullfoss_from_the_Air.jpg" alt = "Gullfoss" width = 400px>
-    <h2>Portfolio</h2>
+    <h1>Aaron Marsh Portfolio</h1>
+    <h2>Site Under Construction</h2>
 </body>
 </html>
 
