--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <title>Aaron Online Portfolio</title>
 </head>
 <body>
-    <h1>Aaron Marsh Portfolio</h1>
-    <h2>Site Under Construction</h2>
+    <div id="root"></div>
+    <noscript>Please enable JavaScript for the full experience!</noscript>
 </body>
 </html>
 
