--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aaron Online Portfolio</title>
+    <link rel="shortcut icon" href="portfolioFavicon.png" type="image/x-icon">
+    <title>Aaron Marsh</title>
 </head>
 <body>
     <div id="root"></div>
